lagt in bild astronaut

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <section class="full-height astronaut">
             <div class="heading-box">
                 <div class="text">To the moon</div>
-                <div class="link">Read or story</div>
+                <div class="link">
+                    Read or story 
+                    <span>→</span>
+                </div>
             </div>
         </section>
 
