--- a/index.html
+++ b/index.html
@@ -5,28 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="normalize.css" text="text/css">
-    <link rel="stylesheet" href="style.css" text="text/css">
+    <link rel="stylesheet" href="css/normalize.css" text="text/css">
+    <link rel="stylesheet" href="css/style.css" text="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <section class="full-height astronaut">
-            <div class="heading-box">
-                <div class="text">To the moon</div>
-                <div class="link">
-                    Read or story 
-                    <span>→</span>
-                </div>
+    <section class="full-height astronaut">
+        <header>
+            <button></button>
+        </header>
+        <div class="heading-box">
+            <div class="text">To the moon</div>
+            <div class="link">
+                Read or story 
+                <span>→</span>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="full-height text-page">
-            del 2 - blaj text
-        </section>
-    </main>
+    <section class="full-height text-page">
+        <div class="brown">
+            <div class="space-ventures">
+                <h2><span>Space</span><span>Ventures</span></h2>
+            </div>
+            <div class="purple">Ground Control to Major Tom</div>
+            <blockquote class="quote">And I'm floating...</blockquote>
+        </div>
+        
+        <div class="grey">
+            <div class="gradient-quote">dolt citat i mobilläge</div>
+            <div class="blue">
+                Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
+                <img src="/assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
+                I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.
+                Ground Control to Major Tom. Your circuit's dead, there's something wrong. Can you hear me, Major Tom? Can you hear me, Major Tom? Can you hear me, Major Tom? Can you "Here am I floating 'round my tin can.
+                Far above the moon
+                Planet Earth is blue
+                And there's nothing I can do</div>
+        </div>
+    </section>
+
 </body>
 </html>
