hamburgermeny och jobbat på sida 2

--- a/index.html
+++ b/index.html
@@ -13,12 +13,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <section class="full-height astronaut">
-        <header>
-            <button></button>
+        <input type="checkbox" />
+        <header class="menu">
+            <button>
+                <span class="button-span"></span>
+                <span class="button-span"></span>
+                <span class="button-span"></span>
+            </button>
+
+            <nav>
+                <ul>
+                    <li>OUR STORY</li>
+                    <li>SPACE VENTURES</li>
+                    <li>ABOUT MAJOR TOM</li>
+                </ul>
+            </nav>
         </header>
+
+        <section class="grid-page">
+            <div class="col1">1</div>
+            <div class="col2">12</div>
+        </section>
+
         <div class="heading-box">
-            <div class="text">To the moon</div>
+            <h1 class="text">To the moon</h1>
             <div class="link">
                 Read or story 
                 <span>→</span>
@@ -26,12 +46,16 @@
         </div>
     </section>
 
-    <section class="full-height text-page">
+    <main class="full-height text-page">
+    <section class="wrapper">
         <div class="brown">
             <div class="space-ventures">
                 <h2><span>Space</span><span>Ventures</span></h2>
             </div>
-            <div class="purple">Ground Control to Major Tom</div>
+            <h3 class="title-text-page">Ground Control to Major Tom.</h3>
+            <p class="text-style">Ground control to Major Tom. Take your protein pills and put your helmet on. 
+            Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three).
+            Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.</p>
             <blockquote class="quote">And I'm floating...</blockquote>
         </div>
         
@@ -47,6 +71,6 @@
                 And there's nothing I can do</div>
         </div>
     </section>
-
+    </main>
 </body>
 </html>
