--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/normalize.css" text="text/css">
-    <link rel="stylesheet" href="css/style.css" text="text/css">
+    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,11 +32,6 @@
             </nav>
         </header>
 
-        <section class="grid-page">
-            <div class="col1">1</div>
-            <div class="col2">12</div>
-        </section>
-
         <div class="heading-box">
             <h1 class="text">To the moon</h1>
             <div class="link">
@@ -55,21 +50,32 @@
             <h3 class="title-text-page">Ground Control to Major Tom.</h3>
             <p class="text-style">Ground control to Major Tom. Take your protein pills and put your helmet on. 
             Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three).
-            Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.</p>
-            <blockquote class="quote">And I'm floating...</blockquote>
+            Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.<br>
+            You've really made the grade. And the papers want to know whose shirts you wear. Now it's time to leave the capsule if you dare.
+            This is Major Tom to Ground Control. I'm stepping through the door.</p>
+            
+            <blockquote class="quote"> “And I'm floating in a most peculiar way.<br>
+            And the stars look very different today.<br>For here.</blockquote>
         </div>
         
         <div class="grey">
             <div class="gradient-quote">dolt citat i mobilläge</div>
             <div class="blue">
-                Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
-                <img src="/assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
-                I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.
-                Ground Control to Major Tom. Your circuit's dead, there's something wrong. Can you hear me, Major Tom? Can you hear me, Major Tom? Can you hear me, Major Tom? Can you "Here am I floating 'round my tin can.
-                Far above the moon
-                Planet Earth is blue
-                And there's nothing I can do</div>
+                <p>Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
+                <img src="assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
+                I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.</p>
+                <p>Ground Control to Major Tom. Your circuit's dead, there's something wrong. Can you hear me, Major Tom? Can you hear me, Major Tom? Can you hear me, Major Tom? Can you "Here am I floating 'round my tin can.</p>
+                <p>Far above the moon</p>
+                <p>Planet Earth is blue</p>
+                <p>And there's nothing I can do</p>
+            </div>
         </div>
+
+        <footer>
+            <p class="read-more">Read more about Major Tom<span class="arrow">→</span></p>
+
+        </footer>
+
     </section>
     </main>
 </body>
