--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To The Moon</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 
@@ -47,34 +47,41 @@
             <div class="space-ventures">
                 <h2><span>Space</span><span>Ventures</span></h2>
             </div>
-            <h3 class="title-text-page">Ground Control to Major Tom.</h3>
-            <p class="text-style">Ground control to Major Tom. Take your protein pills and put your helmet on. 
-            Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three).
-            Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.<br>
-            You've really made the grade. And the papers want to know whose shirts you wear. Now it's time to leave the capsule if you dare.
-            This is Major Tom to Ground Control. I'm stepping through the door.</p>
+            <div class="title-text-page">
+                <h3>Ground Control to Major Tom.</h3>
+            </div>
+
+            <div class="main-text-1">
+                <p >Ground control to Major Tom. Take your protein pills and put your helmet on. 
+                Ground Control to Major Tom (ten, nine, eight, seven, six). Commencing countdown, engines on (five, four, three).
+                Check ignition and may God's love be with you (two, one, liftoff). This is Ground Control to Major Tom.</p>
+            </div>
+
+            <div class="main-text-2">
+                <p>You've really made the grade. And the papers want to know whose shirts you wear. Now it's time to leave the capsule if you dare.
+                This is Major Tom to Ground Control. I'm stepping through the door.</p>
+            </div>
             
-            <blockquote class="quote"> “And I'm floating in a most peculiar way.<br>
-            And the stars look very different today.<br>For here.</blockquote>
+            <blockquote class="quote">“And I'm floating in a most peculiar way. And the stars look very different today.
+            For here.”</blockquote>
         </div>
         
         <div class="grey">
-            <div class="gradient-quote">dolt citat i mobilläge</div>
-            <div class="blue">
+            <blockquote class="gradient-quote">" Persistence is very important. You should not give up unless you are forced to give up. "</blockquote>
+            <img src="assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
+            <div class="main-text-3">
                 <p>Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
-                <img src="assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
                 I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.</p>
+            </div>
+
+            <div class="main-text-4">
                 <p>Ground Control to Major Tom. Your circuit's dead, there's something wrong. Can you hear me, Major Tom? Can you hear me, Major Tom? Can you hear me, Major Tom? Can you "Here am I floating 'round my tin can.</p>
-                <p>Far above the moon</p>
-                <p>Planet Earth is blue</p>
-                <p>And there's nothing I can do</p>
+                <div>Far above the moon</div>
+                <div>Planet Earth is blue</div>
+                <div>And there's nothing I can do</div>
+                <div class="link-text"><p>Read more about Major Tom<span class="arrow"> → </span></p></div>
             </div>
         </div>
-
-        <footer>
-            <p class="read-more">Read more about Major Tom<span class="arrow">→</span></p>
-
-        </footer>
 
     </section>
     </main>
