fortsatt med andra sidan

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <li>OUR STORY</li>
                     <li>SPACE VENTURES</li>
-                    <li>ABOUT MAJOR TOM</li>
+                    <li class="underline-about">ABOUT MAJOR TOM</li>
                 </ul>
             </nav>
         </header>
@@ -39,11 +39,12 @@
                 <span>→</span>
             </div>
         </div>
+        <div class="arrow-down"><span>&#8595;</span></div>
     </section>
 
     <main class="full-height text-page">
-    <section class="wrapper">
-        <div class="brown">
+
+        <section class="wrapper" "brown">
             <div class="space-ventures">
                 <h2><span>Space</span><span>Ventures</span></h2>
             </div>
@@ -63,10 +64,11 @@
             </div>
             
             <blockquote class="quote">“And I'm floating in a most peculiar way. And the stars look very different today.
-            For here.”</blockquote>
-        </div>
+                For here.”
+            </blockquote>
+        </section>
         
-        <div class="grey">
+        <section class="grey">
             <blockquote class="gradient-quote">" Persistence is very important. You should not give up unless you are forced to give up. "</blockquote>
             <img src="assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
             <div class="main-text-3">
@@ -79,11 +81,12 @@
                 <div>Far above the moon</div>
                 <div>Planet Earth is blue</div>
                 <div>And there's nothing I can do</div>
-                <div class="link-text"><p>Read more about Major Tom<span class="arrow"> → </span></p></div>
+                <div class="link-text">
+                    <a href="#" class="read-more">Read more about Major Tom <span class="arrow">→</span></a>
+                </div>
             </div>
-        </div>
+        </section>
 
-    </section>
     </main>
 </body>
 </html>
