--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="full-height astronaut">
         <input type="checkbox" />
         <header class="menu">
-            <button>
+            <button class="meny-button">
                 <span class="button-span"></span>
                 <span class="button-span"></span>
                 <span class="button-span"></span>
@@ -25,9 +25,9 @@
 
             <nav>
                 <ul>
-                    <li>OUR STORY</li>
-                    <li>SPACE VENTURES</li>
-                    <li class="underline-about">ABOUT MAJOR TOM</li>
+                    <li><a href="#">OUR STORY</a></li>
+                    <li><a href="#">SPACE <br>VENTURES</a></li>
+                    <li><a href="#" class="underline">ABOUT <br>MAJOR TOM</a></li>
                 </ul>
             </nav>
         </header>
@@ -44,7 +44,7 @@
 
     <main class="full-height text-page">
 
-        <section class="wrapper" "brown">
+        <section class="wrapper brown">
             <div class="space-ventures">
                 <h2><span>Space</span><span>Ventures</span></h2>
             </div>
@@ -70,12 +70,13 @@
         
         <section class="grey">
             <blockquote class="gradient-quote">" Persistence is very important. You should not give up unless you are forced to give up. "</blockquote>
-            <img src="assets/photos/major_tom.jpg" alt="Major Tom" class="major_tom"/>
             <div class="main-text-3">
                 <p>Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
-                I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.</p>
+                    I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.
+                    <img src="assets/photos/major_tom2.jpg" alt="Major Tom" width="100" height="150" class="major_tom"/>
+                </p>
             </div>
-
+            
             <div class="main-text-4">
                 <p>Ground Control to Major Tom. Your circuit's dead, there's something wrong. Can you hear me, Major Tom? Can you hear me, Major Tom? Can you hear me, Major Tom? Can you "Here am I floating 'round my tin can.</p>
                 <div>Far above the moon</div>
@@ -86,7 +87,10 @@
                 </div>
             </div>
         </section>
-
+        <footer>
+            <p>I don’t know where I’m going from here, but I promise it won’t be boring. You should accept cookies.</p>
+            <button class="cookies-button">Accept</button>
+        </footer>
     </main>
 </body>
 </html>
