fortsatt med små fix

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 This is Major Tom to Ground Control. I'm stepping through the door.</p>
             </div>
             
-            <blockquote class="quote">“And I'm floating in a most peculiar way. And the stars look very different today.
-                For here.”
+            <blockquote class="quote">"And I'm floating in a most peculiar way. And the stars look very different today.
+                For here."
             </blockquote>
         </section>
         
