--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="main-text-3">
                 <p>Am I sitting in a tin can. Far above the world. Planet Earth is blue. And there's nothing I can do. Though I'm past one hundred thousand miles.
                     I'm feeling very still. And I think my spaceship. knows which way to go. Tell my wife I love her very much she knows.
-                    <img src="assets/photos/major_tom2.jpg" alt="Major Tom" width="100" height="150" class="major_tom"/>
+                    <img src="assets/photos/major_tom2.jpg" alt="Major Tom" loading="lazy" width="100" height="150" class="major_tom"/>
                 </p>
             </div>
             
